# simple-rust-app

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs
