[package]
name = "simple-rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = '3.0', features = ['derive']}
serde = {version = '1.0', features = ['derive']}
serde_json = '1.0'
# time = '0.3'
dirs = '3.0'
tempfile = '3.3'
